# VSCode26

./: .gitignore
Demo/CS50/Arrays/: hello.c
Demo/CS50/C/: TerminalCommands.txt  agree.c  calculator.c  compare.c  hello.c  mario.c  mariopro.c  meow.c
Demo/QuZiJiePeiZhi/C++/: test.cpp
Demo/QuZiJiePeiZhi/C/test_231229/: max.c  max.h  test.c
Demo/QuZiJiePeiZhi/C/test_240102/: test2.c
Demo/cwl_configuration/: cwl_configuration.md
Demo/cwl_configuration/Python/demo/: test.py
Demo/cwl_configuration/Python/demo2/: test2.py
Exercises/0CppVersion/: CMakeLists.txt
Exercises/0CppVersion/src/: CppVersion.cpp
Exercises/1loveheart/: CMakeLists.txt
Exercises/1loveheart/src/: main.cpp
Exercises/2RandomNumber/: CMakeLists.txt
Exercises/2RandomNumber/src/: main.c  main.cpp
Exercises/3BinaryTreeTraversal/: CMakeLists.txt
Exercises/3BinaryTreeTraversal/include/: binary_tree.hpp
Exercises/3BinaryTreeTraversal/src/: binary_tree.cpp  main.cpp
Exercises/3CMakePractice/: CMakeLists.txt
Exercises/3CMakePractice/include/: calculator.h
Exercises/3CMakePractice/src/: divide.cpp  main.cpp
cwl_configuration/: cwl_configuration.md
cwl_configuration/CPP/: hello.cpp  test.cpp  说明.txt
cwl_configuration/CPP_CMake/: CMakeLists.txt
cwl_configuration/CPP_CMake/src/: hello.cpp  test.cpp  world.cpp
cwl_configuration/CPP_MSVC/: test.cpp
cwl_configuration/Python/demo/: test1.py
cwl_configuration/QtVSCodeDemo/: CMakeLists.txt  mainwindow.cpp
